Fix controller problem
