# docs/swagger.json
@@ -144,6 +144,47 @@
                 "responses": {}
             }
         },
+        "/translate": {
+            "post": {
+                "description": "Translates the provided text into the target language",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Translate text",
+                "parameters": [
+                    {
+                        "description": "Text to translate",
+                        "name": "text",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Target language code",
+                        "name": "target_language",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"input_text\": \"Input text\", \"translated_text\": \"Translated text\", \"accuracy\":  0.80}",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/uploadtoS3": {
             "post": {
                 "description": "Uploads a file to S3 bucket",
